--- a/src/main/webapp/MaintenanceCustomers.html
+++ b/src/main/webapp/MaintenanceCustomers.html
@@ -57,11 +57,11 @@
                         <form>
                             <div class="form-group">
                                 <label for="goodsName1">客户名字</label>
-                                <input type="text" class="form-control" id="customerName2" placeholder="${$('name' + id).val()}">
+                                <input type="text" class="form-control" id="customerName2" placeholder="${$('#name' + id).html()}">
                             </div>
                             <div class="form-group">
                                 <label for="address">联系方式</label>
-                                <input type="text" class="form-control" id="address2" placeholder="${$('tel' + id).val()}">
+                                <input type="text" class="form-control" id="address2" placeholder="${$('#tel' + id).html()}">
                             </div>
                             <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
                         </form>
