--- a/src/main/webapp/MaintenanceGoods.html
+++ b/src/main/webapp/MaintenanceGoods.html
@@ -77,24 +77,25 @@
                             </div>
                             <div class="form-group">
                                 <label for="goodsName1">货物名称</label>
-                                <input type="text" class="form-control" id="goodsName1" placeholder="${$('name' + id).val()}">
+                                <input type="text" class="form-control" id="goodsName1" placeholder="${$('#name' + id).html()}">
                             </div>
                              <div class="form-group">
                                 <label for="wareId1">仓库编号</label>
-                                <input type="text" class="form-control" id="wareId1" placeholder="${$('wareId' + id).val()}">
+                                <input type="text" class="form-control" id="wareId1" placeholder="${$('#wareId' + id).html()}">
                             </div>
                              <div class="form-group">
                                 <label for="goodsNumber1">货物数量</label>
-                                <input type="text" class="form-control" id="goodsNumber1" placeholder="${$('number' + id).val()}">
+                                <input type="text" class="form-control" id="goodsNumber1" placeholder="${$('number' + id).html()}">
                             </div>
                              <div class="form-group">
                                 <label for="spec1">货物规格</label>
-                                <input type="text" class="form-control" id="spec1" placeholder="${$('spec' + id).val()}">
+                                <input type="text" class="form-control" id="spec1" placeholder="${$('spec' + id).html()}">
                             </div>
                             <button class="btn btn-default" type="button" onclick="changeOver()">提交</button>
                         </form>
                     </div>
                 </div>`;
+            // alert($('#name' + id).innerHTML);
             $("#changeArea").append(insertHTML);
         }
     </script>、
