--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -15,7 +15,7 @@
             $.ajax({
                 type:"GET",
                 url : "/importOrder/addNewImportOrder",
-                data: {goodsNumber: number, inputUnitPrice: price, goodsId: id, spec: spec, remark: remark},
+                data: {goodsNumber: number, inputUnitPrice: price, goodsId: id, remark: remark},
                 success: function (bool) {
                     alert("添加成功！");
                     //此处可能加true参数表示重新获取网页
@@ -114,7 +114,6 @@
             <h3><span class="label label-default">库存盘点</span></h3>
             <table class="table table-hover">
                 <tr><th>货品名称</th><th>数量</th></tr>
-                <tr><td>加多宝</td><td>2000</td></tr>
             </table>
         </div>
     </div>
