--- a/src/main/webapp/MaintenanceGoods.html
+++ b/src/main/webapp/MaintenanceGoods.html
@@ -137,10 +137,10 @@
                         var spec = list[i].goodsSpecification;
                         var wareId = list[i].warehouseId;
                         var number = list[i].goodsNumber;
-                        let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+                        let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
-                        insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button></td>
-<td><button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
+                        insert += `<td><button type="button" class="btn btn-primary btn-xs" onclick="change(${id})">修改货品</button>
+<button type="button" class="btn btn-primary btn-xs" onclick="deleteGoods(${id})">删除货品</button></td></tr>`;
                         $("#goods").append(insert);
                     }
                 }
