--- a/src/main/webapp/SellOrderManage.html
+++ b/src/main/webapp/SellOrderManage.html
@@ -20,7 +20,8 @@
                         var number = list[i].sellNumber;
                         var customerId = list[i].customerId;
                         var remark = list[i].sellOrderRemark;
-                        var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td>
+                        var insert = `<tr><td>${id}</td><td id="${'goodsId' + id}">${goodsId}</td><td id="${'price' + id}">${price}</td>
+<td id="${'number' + id}">${number}</td><td id="${'customerId'}">${customerId}</td><td id="${'remark' + id}">${remark}</td>
 <td><table><td><button class="btn btn-xs btn-primary" onclick="deleteOrder(${id})">删除订单</button></td>
 <td><button class="btn btn-xs btn-primary" onclick="examine(${id}, ${true})">通过</button></td>
 <td><button class="btn btn-xs btn-primary" onclick="examine(${id}, ${false})">不通过</button></td></table></td></tr>`;
@@ -32,6 +33,84 @@
                 alert("获取失败！");
             }
         })
+    </script>
+    <!--    修改订单-->
+    <script>
+        function changeOrder(id){
+            $("#changeOrder").remove();
+            let insertHTML = `<div class="panel panel-default" id="changeOrder">
+                    <div class="panel-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="goodsId">商品ID</label>
+                                <input type="text" class="form-control" id="goodsId" placeholder="${$('#goodsId' + id).html()}">
+                            </div>
+                            <div class="form-group">
+                                <label for="price">商品ID</label>
+                                <input type="text" class="form-control" id="price" placeholder="${$('#price' + id).html()}">
+                            </div>
+                            <div class="form-group">
+                                <label for="number">数量</label>
+                                <input type="text" class="form-control" id="number" placeholder="${$('#number' + id).html()}">
+                            </div>
+                            <div class="form-group">
+                                <label for="customerId">客户ID</label>
+                                <input type="text" class="form-control" id="customerId" placeholder="${$('#customer' + id).html()}">
+                            </div>
+                            <div class="form-group">
+                                <label for="remark">备注</label>
+                                <input type="text" class="form-control" id="remark" placeholder="${$('#remark' + id).html()}">
+                            </div>
+                            <button class="btn btn-default" type="button" onclick="changeOver(${id})">提交</button>
+                        </form>
+                    </div>
+                </div>`;
+            $("#changeArea1").append(insertHTML);
+        }
+    </script>
+<!--    提交更改-->
+    <script>
+        function changeOver(id) {
+            var goodsId = $("#goodsId").val();
+            var price = $("#price").val();
+            var number = $("#number").val();
+            var customerId = $("#customerId").val();
+            var remark = $("#remark").val();
+            if (goodsId.length === 0) {
+                goodsId = $('#goodsId' + id).html();
+            }
+            if (price.length === 0) {
+                price = $('#price' + id).html();
+            }
+            if (number.length === 0) {
+                number = $('#number' + id).html();
+            }
+            if (customerId.length === 0) {
+                customerId = $('#customerId' + id).html();
+            }
+            if (remark.length === 0) {
+                remark = $('#remark' + id).html();
+            }
+
+            $.ajax({
+                type:"GET",
+                url : "/sellOrder/update",
+                dataType: "json",
+                data: {goodsNumber: number, sellUnitPrice: price, remark: remark, goodsId: goodsId, customerId: customerId},
+                success: function (bool) {
+                    if (bool) {
+                        alert("修改成功！");
+
+                    } else {
+                        alert("修改失败，出现错误！");
+                    }
+                    location.reload();
+                },
+                error: function () {
+                    alert("修改失败！");
+                }
+            })
+        }
     </script>
 <!--    取得未付款的订单-->
     <script>
@@ -49,7 +128,7 @@
                     var remark = list[i].sellOrderRemark;
                     var insert = `<tr><td>${id}</td><td>${goodsId}</td><td>${price}</td><td>${number}</td><td>${customerId}</td><td>${remark}</td><td>
 <table>
-<td><button class="btn btn-xs btn-primary" onclick="changeOrder(${id})">删除订单</button></td>
+<td><button class="btn btn-xs btn-primary" onclick="changeOrder(${id})">修改订单</button></td>
 <td><button class="btn btn-xs btn-primary" onclick="deleteOrder(${id})">删除订单</button></td>
 <td><button class="btn btn-xs btn-primary" onclick="pay(${id})">付款</button></td>
 </table>
@@ -166,43 +245,41 @@
             })
         }
     </script>
-<!--    修改订单-->
-    <script>
-        function changeOrder(id){
 
-        }
-    </script>
 </head>
 <body>
 <h1>销售业务管理</h1>
 <button type="button" class="btn btn-primary " onclick = "window.location.href='CreateSalesOrder.html'">开销售单</button>
 <br/>
 <br/>
-<div class="col-md-6">
-    <p>未审核订单</p>
-    <table class="table table-hover" id="unexamined">
-        <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
+<div class="col-md-12">
+    <div class="col-md-6">
+        <p>未审核订单</p>
+        <table class="table table-hover" id="unexamined">
+            <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
 
-    </table>
+        </table>
+    </div>
+    <div class="col-md-6" id="changeArea1"></div>
+</div>
+<div class="col-md-12">
+    <div class="col-md-6">
+        <p>已审核未付款订单</p>
+        <table class="table table-hover" id="unpaid">
+            <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
 
+        </table>
+    </div>
+    <div class="col-md-6" id="changeArea2"></div>
 </div>
-<div class="col-md-6" id="changeArea1">
-
+<div class="col-md-12">
+    <div class="col-md-6">
+        <p>已付款订单</p>
+        <table class="table table-hover" id="paid">
+            <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
+        </table>
+    </div>
+    <div class="col-md-6"  id="changeArea3"></div>
 </div>
-<div class="col-md-6">
-    <p>已审核未付款订单</p>
-    <table class="table table-hover" id="unpaid">
-        <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
-
-    </table>
-</div>
-<div class="col-md-6" id="changeArea2"></div>
-<div class="col-md-6">
-    <p>已付款订单</p>
-    <table class="table table-hover" id="paid">
-        <tr><th>ID</th><th>商品ID</th><th>单价</th><th>数量</th><th>顾客ID</th><th>备注</th><th>操作</th></tr>
-    </table>
-</div>
-<div class="col-md-6"  id="changeArea3"></div>
 </body>
 </html>
