--- a/src/main/webapp/findGoods.html
+++ b/src/main/webapp/findGoods.html
@@ -48,14 +48,6 @@
                                 <input type="text" class="form-control" id="goodsName" placeholder="${$('#name' + id).html()}">
                             </div>
                             <div class="form-group">
-                                <label for="wareId">仓库ID</label>
-                                <input type="text" class="form-control" id="wareId" placeholder="${$('#wareId' + id).html()}">
-                            </div>
-                            <div class="form-group">
-                                <label for="number">数量</label>
-                                <input type="text" class="form-control" id="number" placeholder="${$('#number' + id).html()}">
-                            </div>
-                            <div class="form-group">
                                 <label for="spec">规格</label>
                                 <input type="text" class="form-control" id="spec" placeholder="${$('#spec' + id).html()}">
                             </div>
@@ -71,17 +63,9 @@
     <script>
         function changeOver(id) {
             var name = $("#goodsName").val();
-            var wareId = $("#wareId").val();
-            var number = $("#number").val();
             var spec = $("#spec").val();
             if (name.length === 0) {
                 name = $('#name' + id).html();
-            }
-            if ( wareId.length === 0) {
-                wareId = $('#wareId' + id).html();
-            }
-            if (number.length === 0) {
-                number = $('#number' + id).html();
             }
             if (spec.length === 0) {
                 spec = $('#spec' + id).html();
@@ -90,7 +74,7 @@
                 type:"GET",
                 url : "/customer/update",
                 dataType: "json",
-                data: {customerId: customerId, name: name, tel: tel},
+                data: {goodsName: name, spec: spec},
                 success: function (list) {
                     alert("修改成功！");
                     location.reload();
