--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -71,7 +71,7 @@
                             var spec = list[i].goodsSpecification;
                             var wareId = list[i].warehouseId;
                             var number = list[i].goodsNumber;
-                            let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
+                            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
                             $("#goods").append(insert);
                         }
@@ -136,6 +136,9 @@
             </form>
         </div>
     </div>
+    <table class="table table-hover" id="goods">
+        <tr><th>库存ID</th><th>库存名</th><th>仓库ID</th><th>数量</th><th>规格</th></tr>
+    </table>
 </div>
 <div class="col-md-2"></div>
 </body>
