--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -45,8 +45,8 @@
                     var spec = list[i].goodsSpecification;
                     var wareId = list[i].warehouseId;
                     var number = list[i].goodsNumber;
-                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
-<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
+                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td>
+<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td></tr>`;
                     $("#goods").append(insert);
                 }
             },
@@ -71,9 +71,9 @@
                             var spec = list[i].goodsSpecification;
                             var wareId = list[i].warehouseId;
                             var number = list[i].goodsNumber;
-                            let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td><td id="${'wareId' + id}">${wareId}</td>
-<td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td>`;
-                            $("#goods").append(insert);
+                            let insert = `<tr id="${id}"><td id="${'nameQuery' + id}">${name}</td><td id="${'wareIdQuery' + id}">${wareId}</td>
+<td id="${'numberQuery' + id}">${number}</td><td id="${'specQuery' + id}">${spec}</td>`;
+                            $("#goodsQuery").append(insert);
                         }
                     }
 
@@ -117,8 +117,8 @@
 
         <div class="panel-body">
             <h3><span class="label label-default">库存盘点</span></h3>
-            <table class="table table-hover">
-                <tr><th>货品名称</th><th>数量</th></tr>
+            <table class="table table-hover" id="goods">
+                <tr><th>货品名称</th><th>数量</th><th>规格</th></tr>
             </table>
         </div>
     </div>
@@ -136,7 +136,7 @@
             </form>
         </div>
     </div>
-    <table class="table table-hover" id="goods">
+    <table class="table table-hover" id="goodsQuery">
         <tr><th>库存ID</th><th>库存名</th><th>仓库ID</th><th>数量</th><th>规格</th></tr>
     </table>
 </div>
