--- a/src/main/webapp/StockManage.html
+++ b/src/main/webapp/StockManage.html
@@ -45,7 +45,7 @@
                     var spec = list[i].goodsSpecification;
                     var wareId = list[i].warehouseId;
                     var number = list[i].goodsNumber;
-                    let insert = `<tr id="${id}"><td id="${'name' + id}">${name}</td>
+                    let insert = `<tr id="${id}"><td>${id}</td><td id="${'name' + id}">${name}</td>
 <td id="${'number' + id}">${number}</td><td id="${'spec' + id}">${spec}</td></tr>`;
                     $("#goods").append(insert);
                 }
@@ -64,6 +64,7 @@
                 url : "/warehouseController/queryGoodsByName",
                 data: {name: name},
                 success: function (list) {
+                    let insert = `<tr><th>库存ID</th><th>库存名</th><th>数量</th><th>规格</th></tr>`;
                     if (list !== null){
                         for(var i = 0; i < list.length; i++){
                             var id = list[i].goodsId;
@@ -71,8 +72,8 @@
                             var spec = list[i].goodsSpecification;
                             var wareId = list[i].warehouseId;
                             var number = list[i].goodsNumber;
-                            let insert = `<tr id="${id}"><td id="${'nameQuery' + id}">${name}</td><td id="${'wareIdQuery' + id}">${wareId}</td>
-<td id="${'numberQuery' + id}">${number}</td><td id="${'specQuery' + id}">${spec}</td>`;
+                            insert += `<tr id="${id}"><td id="${'nameQuery' + id}">${name}</td><td id="${'wareIdQuery' + id}">${wareId}</td>
+<td id="${'numberQuery' + id}">${number}</td><td id="${'specQuery' + id}">${spec}</td></tr>`;
                             $("#goodsQuery").append(insert);
                         }
                     }
@@ -118,7 +119,7 @@
         <div class="panel-body">
             <h3><span class="label label-default">库存盘点</span></h3>
             <table class="table table-hover" id="goods">
-                <tr><th>货品名称</th><th>数量</th><th>规格</th></tr>
+                <tr><th>货物ID</th><th>货品名称</th><th>数量</th><th>规格</th></tr>
             </table>
         </div>
     </div>
@@ -137,7 +138,7 @@
         </div>
     </div>
     <table class="table table-hover" id="goodsQuery">
-        <tr><th>库存ID</th><th>库存名</th><th>仓库ID</th><th>数量</th><th>规格</th></tr>
+
     </table>
 </div>
 <div class="col-md-2"></div>
