--- a/src/main/webapp/newAddCustomer.html
+++ b/src/main/webapp/newAddCustomer.html
@@ -35,12 +35,8 @@
         function addOver() {
             var name = $("#customerName1").val();
             var tel = $("#address").val();
-            var status = $("#status").val();
-            if(status==='零售'){
-                status = 1
-            } else {
-                status = 0
-            }
+            var status = $("input[name='status']:checked").val();
+            console.log(status);
             $.ajax({
                 type:"GET",
                 url : "/customer/add",
@@ -333,8 +329,16 @@
                                     <input type="text" class="form-control" id="address">
                                 </div>
                                 <div class="form-group">
-                                    <label>状态</label>
-                                    <input type="text" class="form-control" id="status">
+                                    <p>
+                                        <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md" data-value="{primary:'primary', accent:'accent', warn:'warn'}">
+                                            <input type="radio" name="status" value="0">
+                                            <i class="primary"></i>批发
+                                        </label>
+                                        <label class="radio radio-inline m-a-0 ui-check ui-check-color ui-check-md" data-value="{primary:'accent', accent:'cyan', warn:'warn'}">
+                                            <input type="radio" name="status" value="1">
+                                            <i class="primary"></i>零售
+                                        </label>
+                                    </p>
                                 </div>
                                 <button type="button" class="btn btn-info m-t" onclick="addOver()">提交</button>
                             </form>
